# kachet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  foobar  justfile
doc/: decisions.md
src/: api.rs  db.rs  import.rs  main.rs  money.rs  pdf.rs  prices.rs  report.rs
web/: app.css  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/js/: account-tree.js  api.js  app.js  conn.js  dom.js  fiscal.js  keys.js  register.js  report.js  settings-tab.js  settings.js
web/src/: AccountTree.svelte  App.svelte  Register.svelte  api.ts  app.css  conn.svelte.ts  dom.ts
