[package]
name = "kachet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
mime_guess = "2.0.5"
quick-xml = "0.37"
rust-embed = "8.11.0"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
typst = "0.15.0"
typst-pdf = "0.15.0"
typst-assets = { version = "0.15.0", features = ["fonts"] }
